--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,6 @@
-<p>login works!</p>
+<div class="container">
+  <h1 class="title">Click Here to Login!</h1>
+  <hr>
+  <button mat-flat-button color="primary" (click)="openLogin()">Login</button>
+</div>
+
