--- a/src/app/users/user-list/user-list.component.css
+++ b/src/app/users/user-list/user-list.component.css
@@ -1,3 +1,10 @@
+.modify-section{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 60%;
+}
+
 .container{
   display: flex;
   flex-direction: column;
@@ -27,4 +34,12 @@ span{
 .name, .email{
   font-size: 18px;
   font-weight: 400;
+}
+
+.form-section{
+  margin-top: 20px;
+}
+
+mat-form-field{
+  margin-right: 10px;
 }
