--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -69,15 +69,15 @@
       </button>
     </form>
   </div>
-  <div class="show-button">
-    <button mat-raised-button color="primary">
-      Show 5
-    </button>
-    <button mat-raised-button color="primary">
-      Show 10
-    </button>
-  </div>
-</div>
+  <!-- <div class="show-button"> -->
+    <!-- <button mat-raised-button color="primary"> -->
+      <!-- Show 5 -->
+    <!-- </button> -->
+    <!-- <button mat-raised-button color="primary"> -->
+      <!-- Show 10 -->
+    <!-- </button> -->
+  <!-- </div> -->
+<!-- </div> -->
 
 <div class="second container" *ngIf="users && users.length > 0">
   <div class="user-row" *ngFor="let user of users">
