--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -48,16 +48,6 @@
             <mat-option value="female">Female</mat-option>
           </mat-select>
         </mat-form-field>
-        <mat-form-field>
-          <mat-label>Choose an ID</mat-label>
-          <input
-            matInput
-            type="text"
-            name="id"
-            formControlName="id"
-            minlength="7"
-          />
-        </mat-form-field>
       </div>
       <button
         mat-flat-button
@@ -70,11 +60,17 @@
     </form>
   </div>
   <div class="show-button">
-    <button mat-raised-button color="primary" (click)="numberUsers(5)">
+    <button mat-button color="primary" (click)="numberUsers(5)">
       Show 5
     </button>
-    <button mat-raised-button color="primary" (click)="numberUsers(10)">
+    <button mat-button color="primary" (click)="numberUsers(10)">
       Show 10
+    </button>
+    <button mat-button color="primary" (click)="numberUsers(15)">
+      Show 15
+    </button>
+    <button mat-button color="primary" (click)="numberUsers(20)">
+      Show 20
     </button>
   </div>
 </div>
